--- a/restart-folder/package.json
+++ b/restart-folder/package.json
@@ -15,6 +15,7 @@
   "author": "Rocky Salerno",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "mysql2": "^2.1.0",
