--- a/restart-folder/package.json
+++ b/restart-folder/package.json
@@ -15,11 +15,14 @@
   "author": "Rocky Salerno",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "mysql2": "^2.1.0",
     "sequelize": "^5.22.2",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "sequelize-to-json": "^0.10.4"
+  },
+  "devDependencies": {
+    "handlebars": "^4.5.0"
   }
 }
